k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-web-app
  labels:
    app: go-web-app

spec:
  type: NodePort        
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
    nodePort: 30765     
  selector:
    app: go-web-app
